Mon Jan 27 16:56:07 1997  Tom Yu  <tlyu@mit.edu>

	* Makefile.in:
	* configure.in: Update to new program build procedure.

Sun Nov 10 20:10:53 1996  Sam Hartman  <hartmans@mit.edu>

	* krb_auth_su.c (path_passwd;): If you don't have a srvtab, always
 	fail.

Thu Nov  7 15:41:19 1996  Theodore Ts'o  <tytso@rsts-11.mit.edu>

	* main.c (main): Check the error return from
 		krb5_init_context(), and print an error message if
 		necessary.

Wed Sep 18 15:54:41 1996  Theodore Y. Ts'o  <tytso@mit.edu>

	* krb_auth_su.c (krb5_get_tkt_via_passwd): Remove call to
		krb5_os_localaddr(), since get_in_tkt will default correctly.

Tue Sep 10 14:15:02 1996  Tom Yu  <tlyu@mit.edu>

	* ksu.M: remove ".so man1/header.doc"

Thu Aug  8 12:31:30 1996  Sam Hartman  <hartmans@mit.edu>

	* main.c (main): Close source cache before executing command.

Sat May 25 16:11:55 1996  Sam Hartman  <hartmans@mit.edu>

	* configure.in: Use aname db libs.

Tue May 21 19:14:27 1996  Sam Hartman  <hartmans@mit.edu>

	* Makefile.in (install): Ignore error return from installation of
 	ksu; if we can't set the setuid bit (AFS or non-root), we should
 	still continue.

Mon May 20 00:07:16 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* main.c (main):  Do not force source cache open if we are going to use it as the target.

Sun May 19 13:41:21 1996  Sam Hartman  <hartmans@mit.edu>

	* main.c: Force source ccache to stay open between transactions.

Sun May 19 03:24:26 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* krb_auth_su.c: Use target uid while creating ccache

	* ccache.c: Set uid to target before creating target cache.

	* ksu.h: Add target_uid to copy_ccache and copy_ccache_restricted

Sat May 18 16:39:15 1996  Sam Hartman  <hartmans@tertius.mit.edu>

	* configure.in: Use libkrb5util to get krb5_seteuid

	* heuristic.c (get_best_princ_for_target): Remove seteuid around stat call and insert call to krb5_seteuid before accessing .k5login or .k5users.
