@@ -1,3 +1,9 @@
+Wed Feb  4 20:46:49 1998  Tom Yu  <tlyu@mit.edu>
+
+	* krb_auth_su.c (krb5_verify_tkt_def): If using a pre-existing
+	credential cache, ensure that the host ticket has not yet
+	expired.  Patch from vwelch@ncsa.uiuc.edu [krb5-clients/545].
+
 Mon Jan 27 16:56:07 1997  Tom Yu  <tlyu@mit.edu>
 
 	* Makefile.in:
